--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
  		<p>ID: U1710011</p>
  		<p>Group: 003</p>
  		<p>Mail: nurullayevazam4@gmail.com</p>
- 		<p Web address:><a href="http://Azam1999.github.io">My web page (http://Azam1999.github.io)</a></p>
+ 		<p Web address:><a href="https://azamnurullaev.github.io/">My web page (https://azamnurullaev.github.io/)</a></p>
  	</div>
  	 <div class="img">
  	 	<h1 style="color:gray;">Favorite Books</h1>
